# quantize_palette

./: Cargo.toml  LICENSE-MIT  README.md
examples/: colored_squares.rs  dither_comparison.rs
palettes/: kugelblitz36.gpl
src/: color.rs  encode.rs  files.rs  lib.rs  main.rs  palette.rs  quantize.rs
tests/: pipeline.rs
